# filimon4uck-goit-pythonweb-hw-12

./: .coverage  .coveragerc  Dockerfile  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  test.db
docs/source/: conf.py  index.rst
migrations/versions/: 111e3e541db7_add_to_model_user_reset_password_token.py  74f88cb228e2_add_to_model_user_avatar_and_user_email.py  b8f6f7e7aa0c_add_to_model_user_roles.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repositories/: base.py  contacts_repository.py  refresh_token_repository.py  user_repository.py
src/routes/v1/: auth.py  contacts.py  users.py
src/schemas/: contact.py  token.py  user.py
src/services/: auth.py  contacts.py  email.py  user.py
src/templates/: reset_password.html  verify_email.html
src/utils/: email_token.py  get_services.py  healthchecker.py  reset_password_token.py
tests/: conftest.py  test_contact_repository.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_refresh_token_repository.py  test_user_repository.py
